Changes for 1.8.0.0
* Fixing bug with host bots where disabling players, quitting, then reloading and disabling even more players, resulted in game crash. (veqryn)

* Disallowing previously disabled players from being re-enabled after a game has started. (veqryn)

* Fixed bug with moderator lobby unbanning utility. (veqryn)

* Created ability for lobby admins to ban players inside a host bot, remotely. (veqryn)

* Created ability for lobby admins to stop game on a host bot remotely. (veqryn)

* Created ability for lobby admins to shut down a host bot remotely. (veqryn)

* Created new option for host bots, "triplea.lobby.game.supportPassword", which when set will allow remote actions on the host bot from the lobby admins. (veqryn)

* Created new option for host bots, "triplea.lobby.game.reconnection", which will set the time between lobby reconnection refreshes, with the minimum and default being 6 hours. (veqryn)

* Created new game option property, "Disabled Players Assets Deleted", which will delete all units and resources from a disabled unused player during game startup. (veqryn)

* Allowing clients to disable and enable players for host bots, but not normal hosts. (veqryn)

* Forcing random start to not allow disabled players to select territories, and also letting savegames keep disabled state, and disabled players switched to an AI. (veqryn)

* Creating new playerlist option for players, "canBeDisabled", which if set to true will force the game to delete all delegates for that player, thereby allowing more customized multiplayer games. (veqryn)

* Forcing hosts and hosting bots to always use Secure Random source when playing online, even when the host is not playing. (veqryn)

* Updating TripleA to require at least Java 6 or greater. (veqryn)

* Updating included jar libraries to latest versions. (veqryn)

* Updating embedded JRE to Java 7 update 51 for x86. (veqryn)
